ingress-example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"example-ingress","namespace":"default"},"spec":{"defaultBackend":{"service":{"name":"bar-service","port":{"number":1234}}},"rules":[{"http":{"paths":[{"backend":{"service":{"name":"foo-service","port":{"number":5678}}},"path":"/foo","pathType":"Prefix"},{"backend":{"service":{"name":"bar-service","port":{"number":1234}}},"path":"/bar","pathType":"Prefix"},{"backend":{"service":{"name":"kubernetes-das [...]
  creationTimestamp: "2022-07-23T01:52:42Z"
  generation: 7
  name: example-ingress
  namespace: default
  resourceVersion: "21625"
  uid: c9f85a5d-9d7c-460a-93c2-ae10b253421a
spec:
  defaultBackend:
    service:
      name: kubernetes-dashboard
      port:
        number: 8443
  rules:
  - http:
      paths:
      - backend:
          service:
            name: foo-service
            port:
              number: 5678
        path: /foo
        pathType: Prefix
      - backend:
          service:
            name: bar-service
            port:
              number: 1234
        path: /bar
        pathType: Prefix
      - backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 8443
        path: /dashboard
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: localhost
